--- a/src/components/musicApp.css
+++ b/src/components/musicApp.css
@@ -6,38 +6,49 @@
 
 body {
   height: 100vh;
+  width: 100vw;
   margin: 0;
+  padding: 0 10px;
   font-family: "Lato";
-  background-image: linear-gradient(
+  background: linear-gradient(
     0deg,
     rgb(152, 240, 152) 28%,
     rgb(107, 192, 241) 92%
   );
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.container {
+  display: grid;
+  height: 100vh;
+  grid-template-rows: repeat(2, auto) 1fr 0.05fr;
+  grid-gap: 10px;
 }
 
 .app-name {
   text-align: center;
+  font-weight: 900;
+  position: sticky;
+  cursor: pointer;
 }
 
-.music-container {
-  background-color: #fff;
-  border-radius: 15px;
-  box-shadow: 0 20px 20px 0 rgba(8, 107, 8, 0.87);
-  display: flex;
-  padding: 20px 30px;
-  position: relative;
-  margin: 100px 0;
-  z-index: 10;
+.app-name a {
+  text-decoration: none;
+  color: black;
 }
 
 .album-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: auto 0.5fr auto;
+  place-items: center;
+  position: sticky;
+  cursor: pointer;
+}
+
+.album a {
+  text-decoration: none;
+  color: black;
 }
 
 .album-btn {
@@ -53,26 +64,68 @@ body {
   outline: 0;
 }
 
-.img-container {
-  position: relative;
-  width: 110px;
+.album-btn:hover {
+  transform: scale(2);
 }
 
-.img-container::after {
-  content: "";
+.tracksTable {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.tableHeaderRow th {
+  font-size: small;
+  text-transform: uppercase;
+  cursor: pointer;
+  text-align: left;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #fff;
+  padding: 10px 10px;
+}
+
+.tableBodyRow td {
+  cursor: pointer;
+  padding: 10px 10px;
+  font-weight: 600;
+}
+
+.tableBodyRow:hover {
+  /* transform: scale(1.05) translateX(25px); */
+  /* transition: 100ms; */
+  font-weight: 900;
+  background-color: rgba(238, 241, 240, 0.425);
+}
+
+.music-container {
+  height: 100px;
+  width: min(90%, 800px);
+  display: grid;
+  grid-template-columns: 0.05fr repeat(2, auto);
+  place-items: center;
   background-color: #fff;
-  height: 20px;
-  width: 20px;
+  border-radius: 15px;
+  box-shadow: 0 20px 20px 0 rgba(8, 107, 8, 0.87);
+  padding: 5px 30px;
   position: absolute;
+  bottom: 30px;
   left: 50%;
-  bottom: 50%;
-  border-radius: 50%;
-  transform: translate(-50%, -90%);
+  transform: translateX(-50%);
+  margin: 0 20px;
+  z-index: 10;
+}
+
+.img-container {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  left: 20%;
+  top: -50%;
 }
 
 .img-container img {
   width: inherit;
-  height: 110px;
+  height: inherit;
+  box-shadow: 0px 0px 10px 2px rgba(8, 107, 8, 0.87);
   border-radius: 50%;
   object-fit: cover;
   position: absolute;
@@ -121,6 +174,18 @@ body {
   outline: 0;
 }
 
+.action-btn:hover {
+  transform: scale(1.4);
+  transition: 100ms ease-in-out;
+}
+
+.duration {
+  border: 0.1px solid #cdc2d0;
+  color: #8f8791;
+  border-radius: 20px;
+  padding: 5px 10px;
+}
+
 .music-info {
   background-color: rgba(250, 250, 250, 0.6);
   border-radius: 15px 15px 0 0;
@@ -143,25 +208,6 @@ body {
   transform: translateY(-100%);
 }
 
-.volumeBarContainer {
-  display: flex;
-  position: absolute;
-  right: 20px;
-  bottom: 10px;
-  background-color: rgba(211, 193, 193, 0.9);
-  height: calc(100% - 20px);
-  width: 4px;
-  transform: rotate(180deg);
-  border-radius: 2px;
-}
-
-.volumeBar {
-  height: 100%;
-  width: 100%;
-  border-radius: 2px;
-  background-color: rgba(243, 82, 82, 0.9);
-}
-
 .progress-container {
   background-color: #fff;
   border-radius: 5px;
@@ -177,4 +223,23 @@ body {
   height: 100%;
   width: 0;
   transition: width 0.1s linear;
+}
+
+.volumeBarContainer {
+  display: flex;
+  position: absolute;
+  right: 40px;
+  bottom: 10px;
+  background-color: rgba(211, 193, 193, 0.9);
+  height: calc(100% - 20px);
+  width: 4px;
+  transform: rotate(180deg);
+  border-radius: 2px;
+}
+
+.volumeBar {
+  height: 100%;
+  width: 100%;
+  border-radius: 2px;
+  background-color: rgba(243, 82, 82, 0.9);
 }
