--- a/src/components/musicApp.css
+++ b/src/components/musicApp.css
@@ -8,7 +8,7 @@ body {
   height: 100vh;
   width: 100vw;
   margin: 0;
-  padding: 0 10px;
+  padding: 0;
   font-family: "Lato";
   background: linear-gradient(
     0deg,
@@ -22,7 +22,9 @@ body {
 .container {
   display: grid;
   height: 100vh;
-  grid-template-rows: repeat(2, auto) 1fr 0.05fr;
+  width: 100vw;
+  padding: 0 20px;
+  grid-template-rows: repeat(2, auto) 1fr;
   grid-gap: 10px;
 }
 
@@ -40,7 +42,7 @@ body {
 
 .album-container {
   display: grid;
-  grid-template-columns: auto 0.5fr auto;
+  grid-template-columns: auto 1fr auto;
   place-items: center;
   position: sticky;
   cursor: pointer;
@@ -49,6 +51,7 @@ body {
 .album a {
   text-decoration: none;
   color: black;
+  font-size: 15px;
 }
 
 .album-btn {
@@ -63,10 +66,10 @@ body {
 .album-btn:focus {
   outline: 0;
 }
-
+/* 
 .album-btn:hover {
   transform: scale(2);
-}
+} */
 
 .tracksTable {
   width: 100%;
@@ -74,7 +77,7 @@ body {
 }
 
 .tableHeaderRow th {
-  font-size: small;
+  font-size: 12px;
   text-transform: uppercase;
   cursor: pointer;
   text-align: left;
@@ -84,6 +87,7 @@ body {
 }
 
 .tableBodyRow td {
+  font-size: 11px;
   cursor: pointer;
   padding: 10px 10px;
   font-weight: 600;
@@ -97,8 +101,9 @@ body {
 }
 
 .music-container {
-  height: 100px;
+  height: 80px;
   width: min(90%, 800px);
+  min-width: none;
   display: grid;
   grid-template-columns: 0.05fr repeat(2, auto);
   place-items: center;
@@ -109,23 +114,23 @@ body {
   position: absolute;
   bottom: 30px;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-55%);
   margin: 0 20px;
   z-index: 10;
 }
 
 .img-container {
   position: relative;
-  width: 100px;
-  height: 100px;
-  left: 20%;
+  width: 65px;
+  height: 65px;
+  left: -10%;
   top: -50%;
 }
 
 .img-container img {
   width: inherit;
   height: inherit;
-  box-shadow: 0px 0px 10px 2px rgba(8, 107, 8, 0.87);
+  box-shadow: 0px 0px 5px 1px rgba(8, 107, 8, 0.87);
   border-radius: 50%;
   object-fit: cover;
   position: absolute;
@@ -159,15 +164,15 @@ body {
   background-color: #fff;
   border: none;
   color: #dfdbdf;
-  font-size: 20px;
+  font-size: 25px;
   cursor: pointer;
-  padding: 10px;
-  margin: 0 20px;
+  padding: 1px;
+  margin: 0 10px;
 }
 
 .action-btn-big {
   color: #cdc2d0;
-  font-size: 30px;
+  font-size: 28px;
 }
 
 .action-btn:focus {
@@ -182,8 +187,12 @@ body {
 .duration {
   border: 0.1px solid #cdc2d0;
   color: #8f8791;
+  font-size: 10px;
   border-radius: 20px;
   padding: 5px 10px;
+  position: absolute;
+  left: 5%;
+  bottom: -5%;
 }
 
 .music-info {
@@ -192,7 +201,7 @@ body {
   position: absolute;
   top: 0;
   left: 20px;
-  padding: 10px 10px 10px 150px;
+  padding: 10px 10px 10px 80px;
   width: calc(100% - 40px);
   opacity: 0;
   transform: translateY(0%);
@@ -228,7 +237,7 @@ body {
 .volumeBarContainer {
   display: flex;
   position: absolute;
-  right: 40px;
+  right: 20px;
   bottom: 10px;
   background-color: rgba(211, 193, 193, 0.9);
   height: calc(100% - 20px);
@@ -242,4 +251,246 @@ body {
   width: 100%;
   border-radius: 2px;
   background-color: rgba(243, 82, 82, 0.9);
+}
+
+/* media query to handle responsive desing based on screen break points for mobile and desktop */
+
+@media only screen and (min-width: 375px) {
+  .tableHeaderRow th {
+    font-size: 15px;
+  }
+
+  .tableBodyRow td {
+    font-size: 14px;
+  }
+
+  .music-container {
+    height: 100px;
+  }
+
+  .img-container {
+    position: relative;
+    width: 75px;
+    height: 75px;
+    left: 10%;
+    top: -50%;
+  }
+}
+
+@media only screen and (min-width: 700px) {
+  * {
+    box-sizing: border-box;
+  }
+
+  body {
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+  }
+
+  .container {
+    display: grid;
+    height: 100vh;
+    width: 100vw;
+    grid-template-rows: repeat(2, auto) 1fr 0.05fr;
+    grid-gap: 5px;
+  }
+
+  .album-btn {
+    background-color: transparent;
+    margin: 0 20px;
+    color: #fff;
+    font-size: large;
+    border: none;
+    cursor: pointer;
+  }
+
+  .album-btn:focus {
+    outline: 0;
+  }
+
+  .album-btn:hover {
+    transform: scale(2);
+  }
+
+  .tracksTable {
+    width: 100%;
+    border-collapse: collapse;
+  }
+
+  .tableHeaderRow th {
+    font-size: 16px;
+    text-transform: uppercase;
+    cursor: pointer;
+    text-align: left;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #fff;
+    padding: 10px 10px;
+  }
+
+  .tableBodyRow td {
+    font-size: 15px;
+    cursor: pointer;
+    padding: 10px 10px;
+    font-weight: 600;
+  }
+
+  .tableBodyRow:hover {
+    /* transform: scale(1.05) translateX(25px); */
+    /* transition: 100ms; */
+    font-weight: 900;
+    background-color: rgba(238, 241, 240, 0.425);
+  }
+
+  .music-container {
+    height: 100px;
+    width: min(90%, 800px);
+    display: grid;
+    grid-template-columns: 0.05fr repeat(2, auto);
+    place-items: center;
+    background-color: #fff;
+    border-radius: 15px;
+    box-shadow: 0 20px 20px 0 rgba(8, 107, 8, 0.87);
+    padding: 5px 30px;
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-55%);
+    margin: 0 20px;
+    z-index: 10;
+  }
+
+  .img-container {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    left: 20%;
+    top: -50%;
+  }
+
+  .img-container img {
+    width: inherit;
+    height: inherit;
+    box-shadow: 0px 0px 10px 2px rgba(8, 107, 8, 0.87);
+    border-radius: 50%;
+    object-fit: cover;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    animation: rotate 3s linear infinite;
+    animation-play-state: paused;
+  }
+
+  .music-container.play .img-container img {
+    animation-play-state: running;
+  }
+
+  @keyframes rotate {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
+  .navigation {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+  }
+
+  .action-btn {
+    background-color: #fff;
+    border: none;
+    color: #dfdbdf;
+    font-size: 20px;
+    cursor: pointer;
+    padding: 10px;
+    margin: 0 20px;
+  }
+
+  .action-btn-big {
+    color: #cdc2d0;
+    font-size: 30px;
+  }
+
+  .action-btn:focus {
+    outline: 0;
+  }
+
+  .action-btn:hover {
+    transform: scale(1.4);
+    transition: 100ms ease-in-out;
+  }
+
+  .duration {
+    border: 0.1px solid #cdc2d0;
+    color: #8f8791;
+    border-radius: 20px;
+    padding: 5px 10px;
+    position: relative;
+    left: 0;
+    bottom: 0;
+  }
+
+  .music-info {
+    background-color: rgba(250, 250, 250, 0.6);
+    border-radius: 15px 15px 0 0;
+    position: absolute;
+    top: 0;
+    left: 20px;
+    padding: 10px 10px 10px 150px;
+    width: calc(100% - 40px);
+    opacity: 0;
+    transform: translateY(0%);
+    transition: transform 0.3s ease-in, opacity 0.3s ease-in;
+  }
+
+  .music-info {
+    margin: 0;
+  }
+
+  .music-container.play .music-info {
+    opacity: 1;
+    transform: translateY(-100%);
+  }
+
+  .progress-container {
+    background-color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 10px 0;
+    width: 100%;
+    height: 5px;
+  }
+
+  .progress {
+    background-color: rgba(243, 82, 82, 0.9);
+    border-radius: 5px;
+    height: 100%;
+    width: 0;
+    transition: width 0.1s linear;
+  }
+
+  .volumeBarContainer {
+    display: flex;
+    position: absolute;
+    right: 40px;
+    bottom: 10px;
+    background-color: rgba(211, 193, 193, 0.9);
+    height: calc(100% - 20px);
+    width: 4px;
+    transform: rotate(180deg);
+    border-radius: 2px;
+  }
+
+  .volumeBar {
+    height: 100%;
+    width: 100%;
+    border-radius: 2px;
+    background-color: rgba(243, 82, 82, 0.9);
+  }
 }
